--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1>keenpeeple</h1>
             <h3>Staffing Solutions On Demand</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
     </header>
 
@@ -256,7 +256,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="text-muted">Copyright &copy; keenpeeple 2016</p>
                 </div>
             </div>
         </div>
