--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1>keenpeeple</h1>
             <h3>Staffing Solutions On Demand</h3>
             <br>
-            <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
+            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
     </header>
 
